# TNG033

./: CMakeLists.txt  code.rar
lab1/code/: CMakeLists.txt  set.cpp  set.hpp  test.cpp
lab2/: CMakeLists.txt  expression.cpp  expression.h  lab2.cpp  logarithm.cpp  logarithm.h  polynomial.cpp  polynomial.h  test.cpp
lab3/code/: CMakeLists.txt  exerc2.cpp  exerc3.cpp  exerc3_given.cpp  out_uppgift.txt  out_uppgift_kort.txt  polynomial.cpp  polynomial.h  test.cpp
